modicando pagina de contacto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
     </div>
     
    <nav>
-       <a routerLink="">HomeComponent</a>
+       <a routerLink="">Home</a>
        &nbsp;|&nbsp;
-       <a routerLink="contact">ContactComponent</a>
+       <a routerLink="contact">Contact</a>
     </nav>
     
    
